--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-.container-grid {
+.grid-container {
   height: 400px;
   width: 400px;
   /* border: 1px solid black; */
@@ -12,13 +12,13 @@
   /* place-content: stretch flex-start; */
 }
 
-.container-grid div {
+.grid-container div {
   flex: auto;
   border: 1px solid black;
   height: 25px;
   width: 25px;
 }
 
-.flex-div {
+.grid-div {
   background-color: black;
 }
