--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,8 @@
 .grid-container {
   height: 400px;
   width: 400px;
-  /* border: 1px solid black; */
+  background-color: azure;
+  /* border: 1px solid black;  */
   display: flex;
   /* flex-flow: row wrap; */
   flex-wrap: wrap;
