--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,6 @@ h1 {
 
 .form-container {
   margin: 20px 0;
-  padding-left: 30px;
 }
 
 form {
@@ -33,8 +32,26 @@ form {
 
 .input-container {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+button {
+  background-color: #842fd4a8;
+  padding: 9px 15px;
+  width: 150px;
+  border-radius: 20px/30px;
+  border: 2px solid #6a33cf;
+}
+
+button:hover {
+  background-color: #30e1a0;
+}
 
 .grid-container {
   height: 400px;
