--- a/styles/style.css
+++ b/styles/style.css
@@ -11,14 +11,22 @@
 body {
   display: flex;
   flex-direction: column;
+  background-color: #f0e5b0;
 }
 
 h1 {
-  align-self: center;
   font-size: 40px;
-  margin-top: 12px;
+  padding: 30px;
+  color: #f0f0cd;
+  text-align: center;
 }
 
+h1,
+button {
+  background-color: #842fd4a8;
+}
+
+/* Form Block */
 
 .form-container {
   margin: 20px 0;
@@ -32,30 +40,53 @@ form {
 
 .input-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  font-weight: bold;
+}
+
+.number-input {
+  margin-left: 70px;
+}
+
+.radio-input {
+  margin-right: 265px;
+}
+
+#vertically {
+  margin: 6px 0 0 30px;
+}
+
+#vertically,
+#horizontally {
+  padding: 5px;
+  width: 100px;
+  border: 2px solid black;
+  border-radius: 8px;
 }
 
 .button-container {
+  margin-top: 10px;
   display: flex;
   justify-content: space-evenly;
 }
 
 button {
-  background-color: #842fd4a8;
   padding: 9px 15px;
   width: 150px;
   border-radius: 20px/30px;
   border: 2px solid #6a33cf;
 }
 
-button:hover {
+button:hover,
+#vertically,
+#horizontally {
   background-color: #30e1a0;
 }
 
+/* Grid Block */
+
 .grid-container {
-  height: 400px;
-  width: 400px;
   align-self: center;
   background-color: azure;
   display: flex;
@@ -64,9 +95,8 @@ button:hover {
 
 .grid-container div {
   flex: auto;
-  border: 1px solid black;
-  height: 25px;
-  width: 25px;
+  height: 10px;
+  width: 10px;
 }
 
 .grid-div {
